--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
   <div class="box">
     <div class="search-box">
       <input type="text" class="city" placeholder="Enter City Name">
-      <button id="search"><img src="search.jpeg"></button>
+      <button id="search">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <circle cx="11" cy="11" r="8"></circle>
+          <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+        </svg>
+      </button>
     </div>
     <div class="Weather"></div>
   </div>
-  <script src="script.js"></script>
+  <script src="js/config.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
