--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="Weather"></div>
   </div>
-  <script src="js/config.js"></script>
+  <script src="/api/config.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
